@startuml
hide circle
scale 1.5
skinparam linetype ortho
skinparam monochrome true
left to right direction

entity "hosts" as host {
  *id : int
  --
  name : varchar(100)
  address : varchar(100)
}

entity "pings" as ping {
  *id : int
  --
  createAt : datetime
  *host_id : int <<FK>>
  *stat_id : int <<FK>>
}

entity "icmps" as icmp {
  *id : int
  --
  bytes : int
  ttl : int
  time : float
  *ping_id : int <<FK>>
}

entity "stats" as stat {
  *id : int
  --
  transmitted : int
  received : int
  time : float
}

ping ||--|{ icmp
ping ||--|| stat
host ||--|{ ping
@enduml
